versions/3.4.0/docs/ElementsUserDetail.md
# ElementsUserDetail

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **Int** |  | [optional] [readonly] 
**allowChangingPassword** | **Bool** |  | [optional] 
**allowWanLogin** | **Bool** |  | [optional] 
**allowedFsPaths** | **[String]** |  | [optional] [readonly] 
**allowedFsWritePaths** | **[String]** |  | [optional] [readonly] 
**avatar** | **String** |  | [optional] 
**clientSessions** | [ClientSession] |  | [optional] [readonly] 
**defaultPage** | **String** |  | [optional] 
**displayName** | **String** |  | [optional] [readonly] 
**effectivePermissions** | **[String]** |  | [optional] [readonly] 
**email** | **String** |  | [optional] 
**expiry** | **Date** |  | [optional] 
**ancillaryPathReadOnly** | **Bool** |  | [optional] 
**ancillaryPath** | **String** |  | [optional] 
**fmBookmarks** | **[String]** |  | [optional] 
**fullName** | **String** |  | [optional] 
**gid** | **Int** |  | [optional] 
**groupPermissions** | **[String]** |  | [optional] [readonly] 
**hasPassword** | **Bool** |  | [optional] [readonly] 
**home** | **Int** |  | [optional] 
**isExternal** | **Bool** |  | [optional] 
**isCloud** | **Bool** |  | [optional] 
**isCloudDefault** | **Bool** |  | [optional] 
**isEnabled** | **Bool** |  | [optional] 
**language** | **String** |  | [optional] 
**lastSeen** | **Date** |  | [optional] 
**ldap** | [**LDAPServerReference**](LDAPServerReference.md) |  | [optional] 
**ldapDn** | **String** |  | [optional] 
**passwordChangeRequired** | **Bool** |  | [optional] 
**permissions** | **[String]** |  | 
**shaperCeiling** | **Int** |  | [optional] 
**shaperRate** | **Int** |  | [optional] 
**syncId** | **UUID** |  | [optional] [readonly] 
**totpEnabled** | **Bool** |  | [optional] 
**uid** | **Int** |  | [optional] 
**unixUsername** | **String** |  | [optional] 
**username** | **String** |  | 
**groups** | **Set<Int>** |  | 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


