versions/3.5.0/docs/ElementsUserDetail.md
# ElementsUserDetail

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **Int** |  | 
**ancillaryPath** | **String** |  | [optional] [readonly] 
**ancillaryPathReadOnly** | **String** |  | [optional] [readonly] 
**allowChangingPassword** | **Bool** |  | [optional] 
**allowWanLogin** | **Bool** |  | [optional] 
**allowedFsPaths** | **[String]** |  | [readonly] 
**allowedFsWritePaths** | **[String]** |  | [readonly] 
**avatar** | **String** |  | [optional] 
**defaultPage** | **String** |  | [optional] 
**displayName** | **String** |  | [readonly] 
**effectivePermissions** | **[String]** |  | [readonly] 
**email** | **String** |  | [optional] 
**expiry** | **Date** |  | [optional] 
**fmBookmarks** | **[String]** |  | [optional] 
**fullName** | **String** |  | [optional] 
**gid** | **Int** |  | [optional] 
**groupPermissions** | **[String]** |  | [readonly] 
**hasPassword** | **Bool** |  | [readonly] 
**home** | **Int** |  | [optional] 
**isExternal** | **Bool** |  | [optional] 
**isCloud** | **Bool** |  | [optional] 
**isCloudDefault** | **Bool** |  | [optional] 
**isEnabled** | **Bool** |  | [optional] 
**language** | **String** |  | [optional] 
**lastSeen** | **Date** |  | [optional] 
**ldap** | [**AnyOfLDAPServerReferenceAnyType**](AnyOfLDAPServerReferenceAnyType.md) |  | [optional] 
**ldapDn** | **String** |  | [optional] 
**passwordChangeRequired** | **Bool** |  | [optional] 
**permissions** | **[String]** |  | 
**shaperCeiling** | **Int** |  | 
**shaperRate** | **Int** |  | 
**syncId** | **UUID** |  | [readonly] 
**totpEnabled** | **Bool** |  | [optional] 
**uid** | **Int** |  | [optional] 
**unixUsername** | **String** |  | [optional] 
**username** | **String** |  | 
**groups** | **[Int]** |  | 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


